__before_move/old/apps/utils/onetimesecret/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: utils
  labels:
    app: onetimesecret
    component: frontend
  name: onetimesecret
  annotations:
    kubernetes.io/ingress.class: nginx
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_TARGET_SKY}"
    hajimari.io/enable: "true"
    hajimari.io/icon: "safe"
spec:
  tls:
    - secretName: "${SECRET_DOMAIN_CH//./-}-tls"
      hosts:
        - secrets.${SECRET_DOMAIN_CH}
  rules:
    - host: secrets.${SECRET_DOMAIN_CH}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onetimesecret
                port:
                  number: 7143
